--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Select-X Dashboard - Gerenciamento de Imóveis</title>
     <meta name="description" content="Dashboard profissional para gerenciamento de imóveis da Select-X" />
-    <meta name="author" content="Select-X" />
+    <meta name="author" content="Krivvo" />
 
     <meta property="og:title" content="Select-X Dashboard" />
     <meta property="og:description" content="Sistema de gerenciamento de imóveis" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+ 
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
   </head>
 
   <body>
